# data-types

./: .gitignore  blueripple-data-types.cabal  cabal.project
src/BlueRipple/Data/Types/: Demographic.hs  Election.hs  Geographic.hs  Modeling.hs
