cabal-version: 3.0

name:           blueripple-data-types
version:        0.1.0.0
synopsis:       Basic data types for blueripple data
category:       Data
homepage:       https://github.com/blueripple/data-types#readme
bug-reports:    https://github.com/blueripple/data-types/issues
author:         Adam Conner-Sax
maintainer:     adam@blueripplepolitics.org
copyright:      2024 Adam Conner-Sax
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/blueripple/data-types

library
  exposed-modules: BlueRipple.Data.Types.Demographic
                 , BlueRipple.Data.Types.Geographic
                 , BlueRipple.Data.Types.Election
                 , BlueRipple.Data.Types.Modeling
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
        blueripple-data-tools
      , data-default >= 0.7 && < 0.8
      , discrimination >= 0.4 && < 0.6
      , Frames >= 0.7 && < 0.8
      , Frames-hvega >= 0.2 && < 0.4
      , Frames-utils >= 0.3.1
      , Frames-streamly >= 0.2
      , Frames-serialize >= 0.1.0
      , flat >= 0.5 && < 0.7
      , hvega >= 0.12 && < 0.14
      , base >=4.12.0 && <5
      , foldl >= 1.4 && < 1.5
      , lens >= 5 && < 6
      , relude >= 1.0.0 && < 1.3
      , text >=1.2.3 && < 2.2
      , vector >= 0.12 && < 0.14
      , vector-th-unbox >= 0.2 && < 0.3
      , vinyl >= 0.13 && < 0.15

  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
  default-language: Haskell2010
